--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,11 +1,19 @@
 .Navbar {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+
   .bg__video {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+
     .overlay {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100vh;
+      height: 100%;
       background-color: rgba(0, 0, 0, 0.8);
     }
 
@@ -14,7 +22,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100vh;
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -26,8 +34,18 @@
 
     video {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       object-fit: cover;
+    }
+
+    &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: linear-gradient(rgba(255,255,255,0), rgba(0,0,0,1));
     }
   }
 
